@@ -1,3 +1,1 @@
 SUBDIRS = vrml97
-
-include_HEADERS = vrml97.h
