@@ -1,124 +1,0 @@
-//
-// OpenVRML
-//
-// Copyright (C) 2000  Braden N. McDaniel
-// 
-// This library is free software; you can redistribute it and/or
-// modify it under the terms of the GNU Lesser General Public
-// License as published by the Free Software Foundation; either
-// version 2.1 of the License, or (at your option) any later version.
-// 
-// This library is distributed in the hope that it will be useful,
-// but WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-// Lesser General Public License for more details.
-// 
-// You should have received a copy of the GNU Lesser General Public
-// License along with this library; if not, write to the Free Software
-// Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-// 
-
-#ifndef VRML97_H
-#define VRML97_H
-
-#include <vrml97/Audio.h>
-#include <vrml97/Doc.h>
-#include <vrml97/Image.h>
-#include <vrml97/ScriptJS.h>
-#include <vrml97/ScriptObject.h>
-#include <vrml97/System.h>
-#include <vrml97/Viewer.h>
-#include <vrml97/VrmlAABox.h>
-#include <vrml97/VrmlBSphere.h>
-#include <vrml97/VrmlBVolume.h>
-#include <vrml97/VrmlEvent.h>
-#include <vrml97/VrmlField.h>
-#include <vrml97/VrmlFrustum.h>
-#include <vrml97/VrmlMFColor.h>
-#include <vrml97/VrmlMFFloat.h>
-#include <vrml97/VrmlMFInt.h>
-#include <vrml97/VrmlMFNode.h>
-#include <vrml97/VrmlMFRotation.h>
-#include <vrml97/VrmlMFString.h>
-#include <vrml97/VrmlMFTime.h>
-#include <vrml97/VrmlMFVec2f.h>
-#include <vrml97/VrmlMFVec3f.h>
-#include <vrml97/VrmlNamespace.h>
-#include <vrml97/VrmlNode.h>
-#include <vrml97/VrmlNodeAnchor.h>
-#include <vrml97/VrmlNodeAppearance.h>
-#include <vrml97/VrmlNodeAudioClip.h>
-#include <vrml97/VrmlNodeBackground.h>
-#include <vrml97/VrmlNodeBillboard.h>
-#include <vrml97/VrmlNodeBox.h>
-#include <vrml97/VrmlNodeChild.h>
-#include <vrml97/VrmlNodeCollision.h>
-#include <vrml97/VrmlNodeColor.h>
-#include <vrml97/VrmlNodeColorInt.h>
-#include <vrml97/VrmlNodeCone.h>
-#include <vrml97/VrmlNodeCoordinate.h>
-#include <vrml97/VrmlNodeCoordinateInt.h>
-#include <vrml97/VrmlNodeCylinder.h>
-#include <vrml97/VrmlNodeCylinderSensor.h>
-#include <vrml97/VrmlNodeDirLight.h>
-#include <vrml97/VrmlNodeElevationGrid.h>
-#include <vrml97/VrmlNodeExtrusion.h>
-#include <vrml97/VrmlNodeFog.h>
-#include <vrml97/VrmlNodeFontStyle.h>
-#include <vrml97/VrmlNodeGeometry.h>
-#include <vrml97/VrmlNodeGroup.h>
-#include <vrml97/VrmlNodeIFaceSet.h>
-#include <vrml97/VrmlNodeILineSet.h>
-#include <vrml97/VrmlNodeImageTexture.h>
-#include <vrml97/VrmlNodeIndexedSet.h>
-#include <vrml97/VrmlNodeInline.h>
-#include <vrml97/VrmlNodeLOD.h>
-#include <vrml97/VrmlNodeLight.h>
-#include <vrml97/VrmlNodeMaterial.h>
-#include <vrml97/VrmlNodeMovieTexture.h>
-#include <vrml97/VrmlNodeNavigationInfo.h>
-#include <vrml97/VrmlNodeNormal.h>
-#include <vrml97/VrmlNodeNormalInt.h>
-#include <vrml97/VrmlNodeOrientationInt.h>
-#include <vrml97/VrmlNodePixelTexture.h>
-#include <vrml97/VrmlNodePlaneSensor.h>
-#include <vrml97/VrmlNodePointLight.h>
-#include <vrml97/VrmlNodePointSet.h>
-#include <vrml97/VrmlNodePositionInt.h>
-#include <vrml97/VrmlNodeProto.h>
-#include <vrml97/VrmlNodeProximitySensor.h>
-#include <vrml97/VrmlNodeScalarInt.h>
-#include <vrml97/VrmlNodeScript.h>
-#include <vrml97/VrmlNodeShape.h>
-#include <vrml97/VrmlNodeSound.h>
-#include <vrml97/VrmlNodeSphere.h>
-#include <vrml97/VrmlNodeSphereSensor.h>
-#include <vrml97/VrmlNodeSpotLight.h>
-#include <vrml97/VrmlNodeSwitch.h>
-#include <vrml97/VrmlNodeText.h>
-#include <vrml97/VrmlNodeTexture.h>
-#include <vrml97/VrmlNodeTextureCoordinate.h>
-#include <vrml97/VrmlNodeTextureTransform.h>
-#include <vrml97/VrmlNodeTimeSensor.h>
-#include <vrml97/VrmlNodeTouchSensor.h>
-#include <vrml97/VrmlNodeTransform.h>
-#include <vrml97/VrmlNodeType.h>
-#include <vrml97/VrmlNodeViewpoint.h>
-#include <vrml97/VrmlNodeVisibilitySensor.h>
-#include <vrml97/VrmlNodeWorldInfo.h>
-#include <vrml97/VrmlRenderContext.h>
-#include <vrml97/VrmlSFBool.h>
-#include <vrml97/VrmlSFColor.h>
-#include <vrml97/VrmlSFFloat.h>
-#include <vrml97/VrmlSFImage.h>
-#include <vrml97/VrmlSFInt.h>
-#include <vrml97/VrmlSFNode.h>
-#include <vrml97/VrmlSFRotation.h>
-#include <vrml97/VrmlSFString.h>
-#include <vrml97/VrmlSFTime.h>
-#include <vrml97/VrmlSFVec2f.h>
-#include <vrml97/VrmlSFVec3f.h>
-#include <vrml97/VrmlScene.h>
-#include <vrml97/doc2.hpp>
-
-#endif
