@@ -1,3 +1,1 @@
 SUBDIRS = vrml97gl
-
-include_HEADERS = vrml97gl.h
